2008-07-09 - Darren Sessions <dmsessions@gmail.com>
---------------------------------------------------  
  Added support for handling multiple dtmf input 

  Added support for input timeout and max input digits

  Ignores DTMF if no timeout and max digits args are specified

  Can now wait for DTMF after text-to-speech processing is done if the
  timeout and max digits args are specified

  app_swift 1.6.2 released for the Asterisk 1.6.x code base


2008-04-15 - Darren Sessions <dmsessions@gmail.com>
---------------------------------------------------
  Updated to work with Asterisk 1.6.0-beta7.1 (will no longer work with 1.4.x)
  Internal cleanup
  app_swift 1.6.1 released


2006-10-27 - Will Orton <will@loopfree.net>
-------------------------------------------
  Update to work with Asterisk v1.4Beta3 (will no longer work with 1.2.x)
  Internal cleanup
  app_swift 0.9.1 released


2006-10-26 - Will Orton <will@loopfree.net>
-------------------------------------------
  app_swift 0.9 initial release
